force-app/main/default/objects/Opportunity/fields/Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_No__c</fullName>
    <description>Purchase Order Number for the IO</description>
    <inlineHelpText>Purchase Order Number for billing purposes</inlineHelpText>
    <label>Purchase Order No</label>
    <length>32</length>
    <type>Text</type>
</CustomField>