force-app/main/default/objects/Opportunity/fields/Q1_FY19__c.field-meta.xml
<CustomField>
    <fullName>Q1_FY19__c</fullName>
    <inlineHelpText>Rolled up from Opportunity Product</inlineHelpText>
    <label>Q1 FY19 Forecast</label>
    <summarizedField>OpportunityLineItem.Q1_2019_for_Rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>