force-app/main/default/objects/Opportunity/fields/Q1_FY20_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q1_FY20_Forecast__c</fullName>
    <description>Q1FY20 Forecast rolled up from Opp Product</description>
    <label>Q1 FY20 Forecast</label>
    <summarizedField>OpportunityLineItem.Q1_2020_For_Rollup__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.N_of_Products__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>