force-app/main/default/objects/Opportunity/fields/Q2_FY19_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q2_FY19_Forecast__c</fullName>
    <inlineHelpText>Rolled up from Opportunity Product</inlineHelpText>
    <label>Q2 FY19 Forecast</label>
    <summarizedField>OpportunityLineItem.Q2_2019_for_Rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>