force-app/main/default/objects/Opportunity/fields/Q2_FY20_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q2_FY20_Forecast__c</fullName>
    <description>Q2FY20 Forecast rolled up from Opp Product</description>
    <inlineHelpText>Q2FY20 Forecast rolled up from Opp Product</inlineHelpText>
    <label>Q2 FY20 Forecast</label>
    <summarizedField>OpportunityLineItem.Q2_2020_for_Rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>