force-app/main/default/objects/Opportunity/fields/Retail_Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Retail_Wholesale__c</fullName>
    <label>Retail/Wholesale</label>
    <type>TextArea</type>
</CustomField>