force-app/main/default/objects/Opportunity/fields/SAP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Name__c</fullName>
    <formula>IF(NOT(ISBLANK( Bill_To__c )), Bill_To__r.SAP_Account_Name__c ,if( NOT(ISBLANK( Agency_Name__c )) , Agency_Name__r.SAP_Account_Name__c,Account.SAP_Account_Name__c) )</formula>
    <inlineHelpText>SAP Account Name for the Bill-To Account.If there&apos;s no billable party, then it will default to the Agency account, and then the Advertiser account.</inlineHelpText>
    <label>SAP Account Name</label>
    <type>Text</type>
</CustomField>