force-app/main/default/objects/Opportunity/fields/SAP_Customer_Num__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Num__c</fullName>
    <description>SAP Customer Number of the billable party</description>
    <formula>IF(NOT(ISBLANK( Bill_To__c )),  Bill_To__r.SAP_Customer_No__c  ,if( NOT(ISBLANK(  Agency_Name__c  )) , Agency_Name__r.SAP_Customer_No__c,Account.SAP_Customer_No__c) )</formula>
    <inlineHelpText>If there is an Agency, this is the SAP Customer # of the Agency. If not, then it&apos;s of the Advertiser</inlineHelpText>
    <label>SAP Customer No</label>
    <type>Text</type>
</CustomField>