force-app/main/default/objects/Opportunity/fields/SCEA_Management_Approved__c.field-meta.xml
<CustomField>
    <fullName>SCEA_Management_Approved__c</fullName>
    <label>SCEA Management Approved</label>
    <type>Date</type>
</CustomField>