force-app/main/default/objects/Opportunity/fields/SCEA_Marketing_Commitment__c.field-meta.xml
<CustomField>
    <fullName>SCEA_Marketing_Commitment__c</fullName>
    <label>SCEA Marketing Commitment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>