force-app/main/default/objects/Opportunity/fields/SCEI_Tech_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>SCEI_Tech_Support_Needed__c</fullName>
    <description>Any technical support requirement to SCEI?</description>
    <inlineHelpText>Any technical support requirements to SCEI?</inlineHelpText>
    <label>SCEI Tech Support Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not yet determined</fullName>
                <default>true</default>
                <label>Not yet determined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>