force-app/main/default/objects/Opportunity/fields/SDK__c.field-meta.xml
<CustomField>
    <fullName>SDK__c</fullName>
    <label>SDK</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not yet determined</fullName>
                <default>true</default>
                <label>Not yet determined</label>
            </value>
            <value>
                <fullName>PS3 Native</fullName>
            </value>
            <value>
                <fullName>PS4 Native</fullName>
            </value>
            <value>
                <fullName>PSM</fullName>
            </value>
            <value>
                <fullName>Trilithium</fullName>
            </value>
            <value>
                <fullName>VITA Native</fullName>
            </value>
            <value>
                <fullName>WebMaf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>