force-app/main/default/objects/Opportunity/fields/Sep_2020_Accrual_Amt__c.field-meta.xml
<CustomField>
    <fullName>Sep_2020_Accrual_Amt__c</fullName>
    <label>Sep 2020 Accrual</label>
    <summarizedField>OpportunityLineItem.Sep_2020_Rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>