force-app/main/default/objects/Opportunity/fields/Sep__c.field-meta.xml
<CustomField>
    <fullName>Sep__c</fullName>
    <formula>(Amount *((MAX((DATE($Setup.User_Selected_Year__c.User_Selected_FY__c,09,30)-Opportunity_Start_Date__c),0)-MAX((DATE($Setup.User_Selected_Year__c.User_Selected_FY__c,08,31)-Opportunity_Start_Date__c),0))-(Max((DATE($Setup.User_Selected_Year__c.User_Selected_FY__c,09,30)-Opportunity_End_Date__c),0)-MAX((DATE($Setup.User_Selected_Year__c.User_Selected_FY__c,08,31)-Opportunity_End_Date__c),0))+ if(AND((DATE($Setup.User_Selected_Year__c.User_Selected_FY__c,09,30)-Opportunity_Start_Date__c)&gt;-1,(DATE($Setup.User_Selected_Year__c.User_Selected_FY__c,09,30)-Opportunity_Start_Date__c)&lt;31),1,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>