force-app/main/default/objects/Opportunity/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number(s)</label>
    <type>TextArea</type>
</CustomField>