force-app/main/default/objects/Opportunity/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Provide a short description (140 characters) for reporting purposes.</description>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>