force-app/main/default/objects/Opportunity/fields/SNE_Agrmt_Req_d__c.field-meta.xml
<CustomField>
    <fullName>SNE_Agrmt_Req_d__c</fullName>
    <inlineHelpText>Select one that applies</inlineHelpText>
    <label>SNE Agrmt Req&apos;d</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Amend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>