force-app/main/default/objects/Opportunity/fields/SNE_Involved__c.field-meta.xml
<CustomField>
    <fullName>SNE_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SNE is involved with deal.</description>
    <inlineHelpText>Check box if SNE is involved in discussions</inlineHelpText>
    <label>SNE Involved?</label>
    <type>Checkbox</type>
</CustomField>