force-app/main/default/objects/Opportunity/fields/Sony_Partner__c.field-meta.xml
<CustomField>
    <fullName>Sony_Partner__c</fullName>
    <label>Sony Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SNE</fullName>
            </value>
            <value>
                <fullName>SCEE</fullName>
            </value>
            <value>
                <fullName>SNE &amp; SCEE</fullName>
            </value>
            <value>
                <fullName>SCEI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>