force-app/main/default/objects/Opportunity/fields/Stage_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Stage_Bucket__c</fullName>
    <label>Stage Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Booked+Working</fullName>
                <isActive>false</isActive>
                <label>Booked+Working</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>