force-app/main/default/objects/Opportunity/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <description>Opportunity Status Notes</description>
    <label>Status Notes</label>
    <length>750</length>
    <type>Html</type>
</CustomField>