force-app/main/default/objects/Opportunity/fields/Strategy_Comment__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Comment__c</fullName>
    <label>Strategy Comment</label>
    <type>TextArea</type>
</CustomField>