force-app/main/default/objects/Opportunity/fields/Target_Launch_Timing__c.field-meta.xml
<CustomField>
    <fullName>Target_Launch_Timing__c</fullName>
    <description>Previously Estimated Launch Date</description>
    <inlineHelpText>Estimated date when app will launch</inlineHelpText>
    <label>Target Launch Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not yet determined</fullName>
                <default>true</default>
                <label>Not yet determined</label>
            </value>
            <value>
                <fullName>FYE 12 Q4</fullName>
            </value>
            <value>
                <fullName>FYE 13 Q1</fullName>
            </value>
            <value>
                <fullName>FYE 13 Q2</fullName>
            </value>
            <value>
                <fullName>FYE 13 Q3</fullName>
            </value>
            <value>
                <fullName>FYE 13 Q4</fullName>
            </value>
            <value>
                <fullName>FYE 14 Q1</fullName>
            </value>
            <value>
                <fullName>FYE 14 Q2</fullName>
            </value>
            <value>
                <fullName>FYE 14 Q3</fullName>
            </value>
            <value>
                <fullName>FYE 14 Q4</fullName>
            </value>
            <value>
                <fullName>FYE 15 Q1</fullName>
            </value>
            <value>
                <fullName>FYE 15 Q2</fullName>
            </value>
            <value>
                <fullName>FYE 15 Q3</fullName>
            </value>
            <value>
                <fullName>FYE 15 Q4</fullName>
            </value>
            <value>
                <fullName>FYE 16 Q1</fullName>
            </value>
            <value>
                <fullName>FYE 16 Q2</fullName>
            </value>
            <value>
                <fullName>FYE 16 Q3</fullName>
            </value>
            <value>
                <fullName>FYE 16 Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>