force-app/main/default/objects/Opportunity/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <description>Tax Code from the Bill-To Account</description>
    <formula>IF(NOT(ISBLANK( Bill_To__c )),  Bill_To__r.Tax_Code__c  ,if( NOT(ISBLANK( Agency_Name__c )) ,  Agency_Name__r.Tax_Code__c , Account.Tax_Code__c ) )</formula>
    <inlineHelpText>Tax Code from the Bill-To Account</inlineHelpText>
    <label>Tax Code</label>
    <type>Text</type>
</CustomField>