force-app/main/default/objects/Opportunity/fields/Tech_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Tech_Review_Date__c</fullName>
    <label>Tech Review Date</label>
    <type>Date</type>
</CustomField>