force-app/main/default/objects/Opportunity/fields/Technical_Review__c.field-meta.xml
<CustomField>
    <fullName>Technical_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical review/evaluation needs to be conducted prior to allocating development kit.</description>
    <inlineHelpText>Check if Opportunity requires technical review</inlineHelpText>
    <label>Technical Review</label>
    <type>Checkbox</type>
</CustomField>