force-app/main/default/objects/Opportunity/fields/Territories__c.field-meta.xml
<CustomField>
    <fullName>Territories__c</fullName>
    <label>Territories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
            <value>
                <fullName>US Territories and Possessions</fullName>
            </value>
            <value>
                <fullName>Worldwide (Global)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>