force-app/main/default/objects/Opportunity/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8-bit</fullName>
            </value>
            <value>
                <fullName>animal</fullName>
            </value>
            <value>
                <fullName>aquarium</fullName>
            </value>
            <value>
                <fullName>basketball</fullName>
            </value>
            <value>
                <fullName>cartoon</fullName>
            </value>
            <value>
                <fullName>city</fullName>
            </value>
            <value>
                <fullName>family</fullName>
            </value>
            <value>
                <fullName>fantasy</fullName>
            </value>
            <value>
                <fullName>farm</fullName>
            </value>
            <value>
                <fullName>football</fullName>
            </value>
            <value>
                <fullName>hockey</fullName>
            </value>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>monster</fullName>
            </value>
            <value>
                <fullName>nature</fullName>
            </value>
            <value>
                <fullName>ocean</fullName>
            </value>
            <value>
                <fullName>pet</fullName>
            </value>
            <value>
                <fullName>racing</fullName>
            </value>
            <value>
                <fullName>realistic</fullName>
            </value>
            <value>
                <fullName>safari</fullName>
            </value>
            <value>
                <fullName>sci-fi</fullName>
            </value>
            <value>
                <fullName>soccer</fullName>
            </value>
            <value>
                <fullName>space</fullName>
            </value>
            <value>
                <fullName>war</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>