force-app/main/default/objects/Opportunity/fields/TLA_BPAF__c.field-meta.xml
<CustomField>
    <fullName>TLA_BPAF__c</fullName>
    <label>TLA BPAF #</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>