force-app/main/default/objects/Opportunity/fields/TLA_BPAF_Submitted__c.field-meta.xml
<CustomField>
    <fullName>TLA_BPAF_Submitted__c</fullName>
    <description>Date TLA BPAF Submitted</description>
    <label>TLA BPAF Submitted</label>
    <type>Date</type>
</CustomField>