force-app/main/default/objects/Opportunity/fields/UK_Non_UK__c.field-meta.xml
<CustomField>
    <fullName>UK_Non_UK__c</fullName>
    <formula>IF(or(ISBLANK( Bill_To__c ),isblank( Bill_To__r.BillingCountry )),&quot;Waiting for info&quot;,if( OR(Bill_To__r.BillingCountry =&quot;United Kingdom&quot;,Bill_To__r.BillingCountry =&quot;UK&quot;),&quot;UK&quot;,&quot;NON UK&quot;))</formula>
    <inlineHelpText>Based on Bill-To Account&apos;s Billing Country, determines whether billing is UK or NON UK for the purposes of calculating VAT</inlineHelpText>
    <label>UK/Non UK</label>
    <type>Text</type>
</CustomField>