force-app/main/default/objects/Opportunity/fields/VAT_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>VAT_Multiplier__c</fullName>
    <description>If Billing Country of Bill-To account is UK, VAT multiplier is 1.2, otherwise it is 1. If 0, then Bill-To Account Billing Country is not populated.</description>
    <formula>IF(or(ISBLANK( Bill_To__c ),isblank( Bill_To__r.BillingCountry )),0,if( OR(Bill_To__r.BillingCountry =&quot;United Kingdom&quot;,Bill_To__r.BillingCountry =&quot;UK&quot;),1.2,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Billing Country of Bill-To account is UK, VAT multiplier is 1.2, otherwise it is 1. If 0, then Bill-To Account Billing Country is not populated.</inlineHelpText>
    <label>VAT Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>