force-app/main/default/objects/Opportunity/fields/X2_Yr_Revenue_Forecast__c.field-meta.xml
<CustomField>
    <fullName>X2_Yr_Revenue_Forecast__c</fullName>
    <description>CAS required field.</description>
    <label>2-Yr Revenue Forecast</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>