force-app/main/default/objects/Opportunity/recordTypes/AdSales_RT_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>AdSales_RT_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Opp Path</businessProcess>
    <label>Ad Sales Opportunity</label>
</RecordType>