force-app/main/default/objects/Opportunity/recordTypes/Dev_Rel.recordType-meta.xml
<RecordType>
    <fullName>Dev_Rel</fullName>
    <active>true</active>
    <businessProcess>Dev Rel</businessProcess>
    <description>Separate set of values for Dev Relations and Pub Relations group</description>
    <label>Dev Rel</label>
</RecordType>