force-app/main/default/objects/Opportunity/recordTypes/Dev_Support.recordType-meta.xml
<RecordType>
    <fullName>Dev_Support</fullName>
    <active>true</active>
    <businessProcess>Dev Supp</businessProcess>
    <label>Dev Support</label>
</RecordType>