force-app/main/default/objects/Opportunity/recordTypes/SBD.recordType-meta.xml
<RecordType>
    <fullName>SBD</fullName>
    <active>true</active>
    <businessProcess>SBD</businessProcess>
    <label>SBD</label>
</RecordType>