force-app/main/default/objects/Opportunity/recordTypes/T_M_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>T_M_Opportunity</fullName>
    <active>true</active>
    <businessProcess>T%26M Salesprocess</businessProcess>
    <label>T&amp;M Opportunity</label>
</RecordType>