force-app/main/default/objects/Opportunity/validationRules/Actual_Close_Date_Cannot_be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Close_Date_Cannot_be_Null</fullName>
    <active>true</active>
    <description>Actual Close Date must be populated before the opportunity stage can be moved to &quot;Closed/Won&quot;.</description>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &apos;Closed Won&apos;), ISBLANK(Actual_Close_Date__c))</errorConditionFormula>
    <errorDisplayField>Actual_Close_Date__c</errorDisplayField>
    <errorMessage>Actual Close Date must be populated before it can be moved to &quot;Closed/Won&quot;.</errorMessage>
</ValidationRule>