force-app/main/default/objects/Opportunity/validationRules/AdSales_VR_CloseDate_gt_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AdSales_VR_CloseDate_gt_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>( Opportunity_End_Date__c &lt; Opportunity_Start_Date__c)</errorConditionFormula>
    <errorMessage>End Date should not be less than Start Date.</errorMessage>
</ValidationRule>