force-app/main/default/objects/Opportunity/validationRules/Billing_Party_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Party_Validation</fullName>
    <active>true</active>
    <description>Validation for Opportunity Stage that &quot;Bill-To&quot; party must be populated before it can be moved to &quot;Closed/Won&quot; or &quot;In Contract&quot; stage.</description>
    <errorConditionFormula>AND(Bill_To__c ==null, OR(Text(StageName) = &apos;Closed Won&apos;, text(StageName) = &apos;In Contract&apos;))</errorConditionFormula>
    <errorDisplayField>Bill_To__c</errorDisplayField>
    <errorMessage>Bill-To party must be populated before it can be moved to &quot;Closed/Won&quot; or &quot;In Contract&quot; stage.</errorMessage>
</ValidationRule>