force-app/main/default/objects/Opportunity/validationRules/Description_field_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_field_not_null</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Description)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please enter description field values</errorMessage>
</ValidationRule>