force-app/main/default/objects/Opportunity/listViews/Adsales_Opps_with_no_Quote2.listView-meta.xml
<ListView>
    <fullName>Adsales_Opps_with_no_Quote2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>AdSales_CF_Client_Solutions_Manager__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Actual_Close_Date__c</columns>
    <columns>Opportunity_Start_Date__c</columns>
    <columns>Opportunity_End_Date__c</columns>
    <filterScope>SalesTeam</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.AdSales_RT_Opportunity</value>
    </filters>
    <filters>
        <field>SBQQ__PrimaryQuote__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Opportunity_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020</value>
    </filters>
    <label>Adsales - Opps with no Quote</label>
    <sharedTo>
        <role>Account_Manager_CSM</role>
        <role>Client_Solution_Manager</role>
    </sharedTo>
</ListView>