force-app/main/default/objects/Opportunity/listViews/Adsales_SIEJ_Opportunities.listView-meta.xml
<ListView>
    <fullName>Adsales_SIEJ_Opportunities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Agency_Name__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Actual_Close_Date__c</columns>
    <columns>Opportunity_Start_Date__c</columns>
    <columns>Opportunity_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.AdSales_RT_Opportunity</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>SIEJ</value>
    </filters>
    <label>Adsales - SIEJ Opportunities</label>
</ListView>