force-app/main/default/objects/Opportunity/listViews/CAS_and_BAS_Status.listView-meta.xml
<ListView>
    <fullName>CAS_and_BAS_Status</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CAS__c</columns>
    <columns>CAS_ID__c</columns>
    <columns>BAS__c</columns>
    <columns>BAS_ID__c</columns>
    <columns>Target_Launch_Timing__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>BCzer</value>
    </filters>
    <label>CAS and BAS Status</label>
    <sharedTo>
        <group>SBD_MandEGroup</group>
        <group>SBD_Team_NGA_Opportunity_Report</group>
    </sharedTo>
</ListView>